Fixed Align Tabs (Pure CSS)

--- a/docs/assets/stewed/stewed.css
+++ b/docs/assets/stewed/stewed.css
@@ -357,8 +357,6 @@ ul.dropdown li:hover a {
 
 .tabs .tabs__item {
   position: relative;
-  height: 50px;
-  line-height: 50px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -366,10 +364,11 @@ ul.dropdown li:hover a {
 
 .tabs .tabs__item a {
   display: block;
-  width: 100%;
-  height: 100%;
+  height: 50px;
+  line-height: 50px;
   font-weight: 500;
   color: currentColor;
+  text-decoration: none;
 }
 
 .tabs .tabs__item a:hover {
